<resources>
    <string name="app_name">MVPGuide</string>
    <string name="network_anomalies">网络不可用，请检查网络</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="no_data">暂无相关数据</string>
    <string name="loading">加载中</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="store">收藏</string>
    <string name="news">新闻</string>
    <string name="pic">图片</string>
    <string name="video">视频</string>
    <string name="setting">设置</string>
    <string name="news_detail_picture">news_detail_picture</string>
</resources>
